docs(ud00): adopt Java 25 course baseline